--- a/Web-Dev/Projects/WP2/index.html
+++ b/Web-Dev/Projects/WP2/index.html
@@ -107,6 +107,7 @@
         </div>
       </div>
     </div>
+    <h4 class="site-title">BuildWithNik</h4>
 
     <!--JQuery For DOM Manipulation-->
 
