--- a/Web-Dev/Js-Section/2.Control Statements/1. desion-making/index.html
+++ b/Web-Dev/Js-Section/2.Control Statements/1. desion-making/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IF statement</title>
+    <title>Control statement</title>
   </head>
   <body>
-    <h1>IF</h1>
+    <h1>Control Structures</h1>
     <script src="script.js" defer></script>
   </body>
 </html>
