--- a/Web-Dev/Projects/Mini/Temperature Convertor/index.html
+++ b/Web-Dev/Projects/Mini/Temperature Convertor/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature Convertor</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Temperature Convertor</h1>
