--- a/Web-Dev/Projects/Portfolio/index.html
+++ b/Web-Dev/Projects/Portfolio/index.html
@@ -69,14 +69,19 @@
         <div class="about-text">
           <h2 class="section-title">About Me</h2>
           <p>
-            I'm a Full Stack Developer with hands on experience in building
-            scalable web applications. I specialize in JavaScript technologies
-            across the entire stack and have a passion for creating elegant
-            solutions to complex problems.
+            I'm a Full Stack Developer with a passion for building scalable,
+            responsive, and user-friendly web applications. I specialize in
+            JavaScript technologies across the stack, including HTML5, CSS3,
+            Bootstrap, and MongoDB, and have a strong foundation in Data
+            Structures and Algorithms. I enjoy solving complex problems with
+            clean, efficient code and thrive in both frontend and backend
+            development
           </p>
           <p>
-            When I'm not coding, you can find me contributing to open-source
-            projects, writing technical articles, or exploring new technologies.
+            I’m particularly interested in Generative AI and love exploring ways
+            to integrate AI-driven features into modern web solutions.
+            Constantly learning and adapting to new technologies, I aim to
+            create innovative and impactful digital experiences.
           </p>
         </div>
       </div>
