--- a/Web-Dev/Projects/Major/Portfolio/index.html
+++ b/Web-Dev/Projects/Major/Portfolio/index.html
@@ -116,6 +116,33 @@
             <h3>React</h3>
             <p>Expert in modern JavaScript, including ES6+ features</p>
           </div>
+          <!-- GitHub -->
+          <div class="skills-card">
+            <i class="fa-brands fa-github"></i>
+            <h3>GitHub</h3>
+            <p>Proficient in version control and collaboration using GitHub.</p>
+          </div>
+          <!-- Linux -->
+          <div class="skills-card">
+            <i class="fa-brands fa-linux"></i>
+            <h3>Linux</h3>
+            <p>
+              Skilled in Linux commands for system navigation and file
+              management.
+            </p>
+          </div>
+          <!-- VS Code -->
+          <div class="skills-card">
+            <i class="fa-brands fa-square-js"></i>
+            <h3>VS Code</h3>
+            <p>Developed web applications using Visual Studio Code.</p>
+          </div>
+          <!-- Data Structures and Algorithms -->
+          <div class="skills-card">
+            <i class="fa-solid fa-diagram-project"></i>
+            <h3>DSA</h3>
+            <p>Strong understanding of Data Structures and Algorithms.</p>
+          </div>
         </div>
       </div>
     </section>
