--- a/Web-Dev/Projects/Major/PortFolio2/index.html
+++ b/Web-Dev/Projects/Major/PortFolio2/index.html
@@ -23,7 +23,7 @@
     <main>
       <aside>
         <ul class="Links">
-          <li onclick="Navigate(0)," class="activeLink">
+          <li onclick="Navigate(0)" class="activeLink">
             <i class="fa-solid fa-house"></i>
             <p>Home</p>
           </li>
