--- a/Web-Dev/Projects/Major/PortFolio2/index.html
+++ b/Web-Dev/Projects/Major/PortFolio2/index.html
@@ -126,7 +126,35 @@
             <div class="skills-content">
               <h2 class="heading">My Skills</h2>
               <div class="skills-grid">
-                <!-- skill 1 -->
+                <!-- skill1 -->
+                <div class="skills-card">
+                  <i class="fa-brands fa-html5"></i>
+                  <h3>HTML</h3>
+                  <p>
+                    Proficient in HTML for structuring and designing web pages
+                    with semantic elements.
+                  </p>
+                  <div class="progress-bar">
+                    <div class="progress" data-progress="90">
+                      <span class="progress-text">90%</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- skill3 -->
+                <div class="skills-card">
+                  <i class="fa-brands fa-css3-alt"></i>
+                  <h3>CSS</h3>
+                  <p>
+                    Skilled in CSS for styling, layout design, and creating
+                    responsive web experiences.
+                  </p>
+                  <div class="progress-bar">
+                    <div class="progress" data-progress="90">
+                      <span class="progress-text">90%</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- skill 4 -->
                 <div class="skills-card">
                   <i class="fa-brands fa-square-js"></i>
                   <h3>JavaScript</h3>
@@ -138,7 +166,7 @@
                   </div>
                 </div>
                 <!-- skill2 -->
-                <div class="skills-card">
+                <!-- <div class="skills-card">
                   <i class="fa-brands fa-node"></i>
                   <h3>Node.js</h3>
                   <p>Server-side development with Node.js and Express</p>
@@ -147,8 +175,8 @@
                       <span class="progress-text">90%</span>
                     </div>
                   </div>
-                </div>
-                <!-- skill 3 -->
+                </div> -->
+                <!-- skill 5-->
                 <div class="skills-card">
                   <i class="fas fa-database"></i>
                   <h3>Database</h3>
@@ -160,7 +188,7 @@
                   </div>
                 </div>
                 <!-- skill 4 -->
-                <div class="skills-card">
+                <!-- <div class="skills-card">
                   <i class="fab fa-react"></i>
                   <h3>React</h3>
                   <p>Expert in modern JavaScript, including ES6+ features</p>
@@ -169,7 +197,22 @@
                       <span class="progress-text">90%</span>
                     </div>
                   </div>
+                </div> -->
+                <!-- skill6 -->
+                <div class="skills-card">
+                  <i class="fa-brands fa-bootstrap"></i>
+                  <h3>Bootstrap</h3>
+                  <p>
+                    Proficient in Bootstrap for crafting responsive and visually
+                    appealing web interfaces
+                  </p>
+                  <div class="progress-bar">
+                    <div class="progress" data-progress="90">
+                      <span class="progress-text">90%</span>
+                    </div>
+                  </div>
                 </div>
+
                 <!-- GitHub -->
                 <div class="skills-card">
                   <i class="fa-brands fa-github"></i>
@@ -283,19 +326,22 @@
                 <!-- work 3 -->
                 <div class="work-card">
                   <img
-                    src="https://images.pexels.com/photos/3700908/pexels-photo-3700908.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    alt="project 2"
+                    src="https://images.pexels.com/photos/7991579/pexels-photo-7991579.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="Movie Finder"
                   />
                   <div class="work-info">
                     <div>
-                      <h3>Weather Project</h3>
+                      <h3>Movie Finder</h3>
                       <p>
-                        A weather app providing real-time weather updates based
-                        on user location or search input.
+                        A dynamic movie search platform built with css, allowing
+                        users to explore movies and view detailed information.
                       </p>
                     </div>
                     <div class="work-links">
-                      <a href="https://w2p-nik.netlify.app/" target="_blank">
+                      <a
+                        href="https://movie-nik-0280.netlify.app/"
+                        target="_blank"
+                      >
                         <i class="fas fa-external-link-alt"></i>
                         Live
                       </a>
